# Odd

./: .gitignore  .gitmodules  CMakeLists.txt  Odd.sln  README.md  imgui_template.ini  premake5.lua
Examples/Sandbox/: Sandbox.vcxproj  Sandbox.vcxproj.filters  imgui.ini
Examples/Sandbox/src/: Sandbox.cpp  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
Examples/Sandbox/src/Shaders/: ColorQuad.glsl  ColoredTextureQuad.glsl  DefaultSquare.fs  DefaultSquare.glsl  DefaultSquare.vs  DefaultTriangle.fs  DefaultTriangle.glsl  DefaultTriangle.vs  Square.glsl  TextureQuad.glsl
Odd/: Odd.vcxproj  Odd.vcxproj.filters
Odd-Editor/: Odd-Editor.vcxproj  Odd-Editor.vcxproj.filters  imgui.ini
Odd-Editor/SandboxProject/Scenes/: 3DCube.odd  Example.odd  Physics2D.odd  Platformer.odd
Odd-Editor/SandboxProject/Scripts/: FollowPlayer.cpp  FollowPlayer.h  PlayerController.cpp  PlayerController.h
Odd-Editor/SandboxProject/Sounds/: credits.txt
Odd-Editor/SandboxProject/Textures/: credits.txt
Odd-Editor/src/: EditorLayer.cpp  EditorLayer.h  OddEditorApp.cpp
Odd-Editor/src/Assets/Scenes/: 3DCube.odd  Example.odd  Physics2D.odd
Odd-Editor/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Odd/src/: Odd.h  oddpch.cpp  oddpch.h
Odd/src/Odd/: Application.cpp  Application.h  Core.h  EntryPoint.h  OrthographicCameraController.cpp  OrthographicCameraController.h
Odd/src/Odd/Audio/: Audio.cpp  Audio.h  AudioListener.cpp  AudioListener.h  AudioSource.cpp  AudioSource.h
Odd/src/Odd/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Timestep.h  UUID.cpp  UUID.h  Window.h
Odd/src/Odd/Debug/: Instrumentor.h
Odd/src/Odd/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Odd/src/Odd/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Odd/src/Odd/ImGui/Windows/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
Odd/src/Odd/Input/: Input.h  MouseCodes.h
Odd/src/Odd/Math/: Math.cpp  Math.h
Odd/src/Odd/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  ShaderDataTypes.h  SubTexture2D.cpp  SubTexture2D.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
Odd/src/Odd/Scene/: Components.h  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Odd/src/Odd/Utils/: PlatformUtils.h
Odd/src/Platform/Common/: CommonWindow.cpp  CommonWindow.h
Odd/src/Platform/Linux/: LinuxPlatformUtils.cpp
Odd/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Odd/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
Odd/src/Shaders/: TextureQuad.glsl
Scripts/: Win-GenerateProjects.bat
